--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,22 @@
 /* Custom */
 
+.sweet-alert button {
+  background-color: #3F5872 !important;
+}
+
+.sweet-alert button:hover {
+  background-color: #446180 !important;
+}
+
+.hidden-submit {
+  border: 0 none;
+  height: 0;
+  width: 0;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
 .header-embedded {
   padding-left: 0 !important;
   padding-right: 0 !important;
@@ -543,6 +560,7 @@ footer, .push {
   //margin-right: 15px;
   background: @color-bright;
   cursor: pointer;
+  color: #999;
 }
 
 .header-link:hover {
