nearly complete import feature

--- a/app/components/users/user.contact.html
+++ b/app/components/users/user.contact.html
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <input type="email" placeholder="Your email.." class="form-control input-lg" required name="email" ng-model="contact.form.email_value">
                 <div class="m-t-xs" ng-show="contact.form.email.$invalid && contact.form.submitted">
-                    <span class="text-danger" ng-show="contact.form.email.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please input a valid email address</span>
+                    <span class="text-danger" ng-show="contact.form.email.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please enter a valid email address..</span>
                 </div>
             </div>
             <div class="form-group">
