--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -25,7 +25,7 @@
                     <li ng-if="!nav.user" class="dropdown">
                         <div style="padding-top: 21px;" ng-controller="LoginController as login">
                             <a tooltip-placement="left" tooltip="Login">
-                                <div ng-click="login.authenticate('linkedin')" style="font-size: 16px;">Log In</div>
+                                <div ng-click="login.authenticate('linkedin')" style="font-size: 16px;">Log In&nbsp;</div>
                             </a>
                         </div>
                     </li>
@@ -94,6 +94,9 @@
                         <ul ng-show="nav.path().endsWith(nav.location_path + '/people') || nav.path().endsWith(nav.location_path + '/startups') || nav.path().endsWith(nav.location_path + '/search') || nav.path().endsWith(nav.location_path)" style="display: block;">
                             <li ui-sref="user.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
+                                <li ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.community.key) > -1" class="nav-third-level" ui-sref="user.invite">
+                                    <a>+&nbsp;&nbsp;Invite People</a>
+                                </li>
                             </li>
                             <li ui-sref="startup.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/startups') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
@@ -155,11 +158,11 @@
                     <li ng-repeat="item in nav.networks">
                         <a ui-sref="network.dashboard({location_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
 
-                            <!--
-                            <li ng-if="nav.path().endsWith('/people')" class="nav-third-level" ui-sref="user.invite">
+
+                            <li ng-if="nav.path().endsWith('/people') && nav.user.roles.leader[nav.community].indexOf(nav.community) > -1" class="nav-third-level" ui-sref="user.invite">
                                 <a>+&nbsp;&nbsp;Invite People</a>
                             </li>
-                            -->
+
 
                     </li>
                 </ul>
