--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -15,11 +15,11 @@
         * This process currently <b>does not</b> notify the user (or invite them) in any way.
     </div>
     <div ng-show="invite.alert" class="alert" ng-class="{'alert-success' : invite.alert.type == 'success', 'alert-danger' : invite.alert.type == 'danger'}">
-        <i class="fa fa-exclamation"></i> {{ invite.alert.message }}
+        &nbsp;{{ invite.alert.message }}
     </div>
         <div class="panel-body">
             <div style="padding: 20px 20px 60px 20px;">
-                <form role="form" name="invite.form" novalidate ng-submit="invite.invitePerson(nav.location_path, nav.community.key)">
+                <form role="form" name="invite.form" novalidate ng-submit="invite.inviteUser(nav.location_path, nav.community.key)">
                     <div class="form-group">
                         <label>Email Address:</label>
                         <input type="email" placeholder="new@mentor.com" class="form-control input-lg" required name="email" ng-model="invite.form.email_value">
