--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -81,17 +81,17 @@
                 </a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a ui-sref="{{nav.location.type + '.dashboard({location_path: nav.location.key, community: nav.location})'}}" ng-class="{active: nav.path().includes('/' + nav.location.key)}">
-                            <span ng-if="nav.location.community_profiles[nav.location_path]">
-                                <i ng-if="nav.location.community_profiles[nav.location_path].icon" ng-class="'fa ' + nav.location.community_profiles[nav.location_path].icon"></i>
-                                <i ng-if="!nav.location.community_profiles[nav.location_path].icon" class="fa fa-globe"></i>
-                                &nbsp;&nbsp;{{nav.location.community_profiles[nav.location_path].name}}</span>
-                            <span ng-if="!nav.location.community_profiles[nav.location_path]">
-                                <i ng-if="nav.location.profile.icon" ng-class="'fa ' + nav.location.profile.icon"></i>
-                                <i ng-if="!nav.location.profile.icon" class="fa fa-globe"></i>
-                                    &nbsp;&nbsp;{{nav.location.profile.name}}</span>
+                        <a ui-sref="{{nav.community.type + '.dashboard({location_path: nav.location.key, community: nav.location})'}}" ng-class="{active: nav.path().includes('/' + nav.location.key)}">
+                            <span ng-if="nav.community.community_profiles[nav.location_path]">
+                                <i ng-if="nav.community.community_profiles[nav.location_path].icon" ng-class="'fa ' + nav.community.community_profiles[nav.location_path].icon"></i>
+                                <i ng-if="!nav.community.community_profiles[nav.location_path].icon" class="fa fa-globe"></i>
+                                &nbsp;&nbsp;{{nav.community.community_profiles[nav.location_path].name}}</span>
+                            <span ng-if="!nav.community.community_profiles[nav.location_path]">
+                                <i ng-if="nav.community.profile.icon" ng-class="'fa ' + nav.community.profile.icon"></i>
+                                <i ng-if="!nav.community.profile.icon" class="fa fa-globe"></i>
+                                    &nbsp;&nbsp;{{nav.community.profile.name}}</span>
                         </a>
-                        <ul ng-show="nav.path().endsWith(nav.location_path + '/people') || nav.path().endsWith(nav.location_path + '/startups') || nav.path().endsWith(nav.location_path + '/search') || nav.path().endsWith(nav.location_path)" style="display: block;">
+                        <ul style="display: block;">
                             <li ui-sref="user.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                                 <li ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="nav-third-level" ui-sref="user.invite">
@@ -115,7 +115,7 @@
                 </span></p>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.locations" ng-if="item.key !== nav.community_path">
-                        <a ui-sref="location.dashboard({location_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="location.dashboard({location_path: item.key, community: item, query: '*'})" ng-class="{active: nav.path().includes('/' + item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
             </li>
@@ -129,7 +129,7 @@
                 </span></p>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
-                        <a ui-sref="industry.dashboard({community_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}">
+                        <a ui-sref="industry.dashboard({community_path: item.key, community: item, query: '*'})" ng-class="{active: nav.path().includes('/' + item.key)}">
                             <span ng-if="item.community_profiles[nav.location_path]">
                                 <i ng-class="'fa ' + item.community_profiles[nav.location_path].icon"></i>&nbsp;&nbsp;{{item.community_profiles[nav.location_path].name}}</span>
                             <span ng-if="!item.community_profiles[nav.location_path]">
@@ -159,7 +159,7 @@
                 </span></p>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
-                        <a ui-sref="network.dashboard({location_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="network.dashboard({community_path: item.key, community: item, query: '*'})" ng-class="{active: nav.path().includes('/' + item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
             </li>
