settings working, need to retrieve for modal

--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -39,6 +39,6 @@
             </div>
     </div>
     <div class="panel-footer">
-        To import a full spreadsheet, please <a href="mailto:james@startupcommunity.org">email James</a>.
+        To import a full spreadsheet, please <a href="mailto:james@startupcommunity.org">click here to let us know</a>.
     </div>
 </div>
