--- a/app/components/common/nav/nav.change_location.html
+++ b/app/components/common/nav/nav.change_location.html
@@ -2,7 +2,7 @@
     <div class="color-line"></div>
     <div class="modal-header">
         <h4 class="modal-title">Change Location</h4>
-        <small class="font-bold">Type a city, state, or county name.</small>
+        <p class="font-bold">Type a city, state, or county name.</p>
     </div>
     <div class="modal-body">
         
