--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -77,7 +77,7 @@
                     Community
 
                 </span>
-                    <span class="fa fa-gear pull-right" ng-click="nav.changeLocation()" tooltip="Change" style="opacity: .6; margin-top: 4px; cursor: pointer;"></span>
+                    <!--<span class="fa fa-gear pull-right" ng-click="nav.changeLocation()" tooltip-placement="left" tooltip="Change Location" style="opacity: .6; margin-top: 4px; cursor: pointer;"></span>-->
                 </a>
                 <ul class="nav nav-second-level">
                     <li>
@@ -90,6 +90,7 @@
                                 <i ng-if="nav.community.profile.icon" ng-class="'fa ' + nav.community.profile.icon"></i>
                                 <i ng-if="!nav.community.profile.icon" class="fa fa-globe"></i>
                                     &nbsp;&nbsp;{{nav.community.profile.name}}</span>
+                            <div id="setCommunity" ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-right" ng-click="nav.communitySettings()" tooltip-placement="left" tooltip="Settings" style="opacity: .6; margin-top: 3px; cursor: pointer;     padding-right: 10px;"></div>
                         </a>
                         <ul style="display: block;">
                             <li ui-sref="user.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
