--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="hpanel">
+<div class="hpanel hgreen">
     <div class="panel-heading hbuilt">
         * This process currently <b>does not</b> notify the user (or invite them) in any way, it simply adds them to the community.
     </div>
