--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -93,13 +93,13 @@
                         </a>
                         <div ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-right" ng-click="nav.communitySettings()" tooltip-placement="left" tooltip="Settings" style="opacity: .6; cursor: pointer; padding-right: 15px; margin-top: -25px;"></div>
                         <ul ng-if="nav.community.type !== 'user' && nav.community.type !== 'startup'" style="display: block;">
-                            <li ui-sref="user.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
+                            <li ui-sref="{{'user' + nav.list_url}}" ng-class="{ 'active' : nav.path().endsWith(nav.community.key + '/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                                 <li ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="nav-third-level" ui-sref="user.invite">
                                     <a style="color: #aaa;">+&nbsp;&nbsp;Invite People</a>
                                 </li>
                             </li>
-                            <li ui-sref="startup.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/startups') }">
+                            <li ui-sref="{{'startup' + nav.list_url}}" ng-class="{ 'active' : nav.path().endsWith(nav.community.key + '/startups') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
@@ -115,7 +115,7 @@
 
                 </span></p>
                 <ul class="nav nav-second-level">
-                    <li ng-repeat="item in nav.locations" ng-if="item.key !== nav.community_path">
+                    <li ng-repeat="item in nav.locations" ng-if="item.key !== nav.community.key">
                         <a ui-sref="location.dashboard({location_path: item.key, community: item, query: '*'})" ng-class="{active: nav.path().includes('/' + item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
@@ -136,17 +136,6 @@
                             <span ng-if="!item.community_profiles[nav.location_path]">
                                 <i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</span>
                         </a>
-                        <ul ng-if="nav.path().includes('/' + item.key)">
-                            <li ui-sref="user.list({location_path: nav.location_path, community_path: item.key, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/people') }">
-                                <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
-                                <li ng-if="nav.user.roles.leader[nav.community.key]" class="nav-third-level" ui-sref="user.invite">
-                                    <a style="color: #aaa;">+&nbsp;&nbsp;Invite People</a>
-                                </li>
-                            </li>
-                            <li ui-sref="startup.list({location_path: nav.location_path, community_path: item.key, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/startups') }">
-                                <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
-                            </li>
-                        </ul>
                     </li>
                 </ul>
             </li>
