--- a/app/components/common/nav/nav.community_settings.html
+++ b/app/components/common/nav/nav.community_settings.html
@@ -60,7 +60,7 @@
                                 <input type="text" class="form-control input-lg" placeholder="{{domain.color}}" disabled>
                             </td>
                             <td style="padding-left: 20px;">
-                                <i class="pe-7s-close-circle" ng-click="settings.removeEmbed($index)" style="font-size: 28px;"></i>
+                                <i class="pe-7s-close-circle" ng-click="settings.removeEmbed($index)" style="font-size: 28px; cursor: pointer;"></i>
                             </td>
                         </tr>
                     </table>
