--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -163,7 +163,7 @@
 
 <!-- Main Content -->
 <div ui-view>
-    <div id="main-content" ng-class="{'wrapper' : !nav.embedded}">
+    <div ng-style="{'background-color': nav.color}" ng-class="{'wrapper' : !nav.embedded}">
         <div ng-class="{'embed_header' : nav.embedded}" ui-view="header"></div>
         <div ng-class="{'content' : !nav.embedded}">
             <div ui-view="content"></div>
