--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -2,6 +2,7 @@
 .hpanel > .panel-heading {
   color: inherit;
   font-weight: 300;
+  font-size: 16px;
   padding: 10px 4px;
   transition: all .3s;
   border: 1px solid transparent;
