fixed header issues with small screens

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -911,6 +911,10 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
     margin: 0;
   }
 
+  .navbar-right {
+    display: none;
+  }
+
   .header-nav-link {
     margin-top: -10px;
   }
@@ -929,8 +933,9 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
     height: 48px;
   }
 
+
   #hbreadcrumb {
-    float: none !important;
+    //float: none !important;
     margin-bottom: 10px;
     margin-top: 0;
   }
