--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -1,6 +1,6 @@
 <div>
     <!-- Header -->
-    <div id="header">
+    <div id="header" ng-class="{'no-sides' : !nav.embedded}">
         <div ng-class="{'bright-line' : !nav.embedded, 'grey-line' : nav.embedded}">
         </div>
         <div id="logo" class="light-version">
