--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -36,6 +36,8 @@ body {
   padding: 0;
   position: relative;
   border-bottom: 1px solid @border-color;
+  border-left: 1px solid @border-color;
+  border-right: 1px solid @border-color;
 }
 
 #menu {
@@ -65,14 +67,6 @@ body {
   min-width: 320px;
 }
 
-@media(max-width: 768px) {
-
-  .content {
-    padding: 15px 15px 15px 15px;
-    min-width: 320px;
-  }
-
-}
 
 .content-boxed {
   max-width: 1100px;
@@ -95,7 +89,7 @@ body {
 
 .grey-line {
   height: 1px;
-  background: #eee;
+  background: #E4E5E7;
   background-size: 100% 4px;
   background-position: 50% 100%;
   background-repeat: no-repeat;
