--- a/app/less/various.less
+++ b/app/less/various.less
@@ -22,8 +22,8 @@
 }
 
 .header-embedded {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+  padding-left: 10px !important;
+  padding-right: 10px !important;
 }
 
 .ui-select-highlight {
@@ -1015,14 +1015,6 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 .normalheader {
   min-width: 320px;
   padding: 25px;
-}
-
-@media(max-width: 768px) {
-
-  .normalheader {
-    padding: 15px 15px 0px 15px;
-  }
-
 }
 
 .normalheader h2 {
