--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -52,7 +52,7 @@
   background-color: none;
   border: none;
   box-shadow: none;
-  margin-bottom: 25px;
+  margin-bottom: 24px;
 }
 
 .panel-tools {
@@ -169,14 +169,17 @@
 }
 
 .small-header .panel-body {
-  padding: 0 25px;
-  border-right: none;
-  border-left: none;
+  padding: 0 20px;
   border-top: none;
   border-radius: 0;
   min-height: 35px;
   margin-bottom: 25px;
   //  background: @color-bright;
+}
+
+.no-sides {
+  border-right: none !important;
+  border-left: none !important;
 }
 
 .panel-body h5, .panel-body h4 {
